Init base authentication form

--- a/unihand/main/templates/main/components/site_header.html
+++ b/unihand/main/templates/main/components/site_header.html
@@ -27,7 +27,7 @@
         </a>
       </div>
       <div class="site-header-item">
-        <a href="#">
+        <a href="{% url 'register' %}">
           <span>Register</span>
         </a>
       </div>
