--- a/unihand/users/templates/registration/login.html
+++ b/unihand/users/templates/registration/login.html
@@ -9,9 +9,9 @@
     <form action="{% url 'login' %}" method="POST">
       {% csrf_token %}
       {{ form.as_p }}
-      {% if request.GET.next %}
+      <!-- {% if request.GET.next %}
         <input type="hidden" name="next" value="{{ request.GET.next }}">
-      {% endif %}
+      {% endif %} -->
       <div class="form-field">
         <button class="button button-primary" type="submit">Login</button>
       </div>
