Change login method
- Remove register
- Create mock data

--- a/unihand/main/templates/main/components/site_header.html
+++ b/unihand/main/templates/main/components/site_header.html
@@ -12,6 +12,19 @@
           <span>{{ user.username }}</span>
         </a>
       </div>
+        {% if user.role == 'Student' and user.student %}
+          <div class="site-header-item">
+            <a href="#">
+              <span>{{ user.student.student_id }}</span>  
+            </a>
+          </div>
+        {% elif user.role == 'Professor' %}
+          <div class="site-header-item">
+            <a href="#">
+              <span>{{ user.professor.professor_id }}</span>  
+            </a>
+          </div>
+        {% endif %}
       <div class="site-header-item">
         <form action="{% url 'logout' %}" method="post">
           {% csrf_token %}
@@ -24,11 +37,6 @@
       <div class="site-header-item">
         <a href="{% url 'login' %}">
           <span>Login</span>
-        </a>
-      </div>
-      <div class="site-header-item">
-        <a href="{% url 'register' %}">
-          <span>Register</span>
         </a>
       </div>
     {% endif %}
