Update login method
- Redirect users to their role's home page after login.

--- a/unihand/main/templates/main/professor/home.html
+++ b/unihand/main/templates/main/professor/home.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <section class="home-landing">
-    <h1 class="home-landing-text">Guest Home</h1>
+    <h1 class="home-landing-text">Professors Home</h1>
   </section>
 {% endblock %}
