--- a/unihand/main/templates/main/admin/home.html
+++ b/unihand/main/templates/main/admin/home.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <section class="home-landing">
-    <h1 class="home-landing-text">Guest Home</h1>
+    <h1 class="home-landing-text">Admin Home</h1>
   </section>
 {% endblock %}
