Fixed home page redirect

--- a/unihand/main/templates/main/components/site_header.html
+++ b/unihand/main/templates/main/components/site_header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header class="site-header">
   <div class="site-header-item">
-    <a class="site-header-brand" href="{% url 'home' %}">
+    <a class="site-header-brand" href="{% url 'role_redirect' %}">
       <span>UniHand</span>
     </a>
   </div>
