--- a/unihand/students/templates/students/home.html
+++ b/unihand/students/templates/students/home.html
@@ -4,5 +4,11 @@
 {% block content %}
 <section class="home-landing">
     <h1 class="home-landing-text">Students Home</h1>
-  </section>
+</section>
+<ul>
+    <li><a href="{% url 'course_schedules' %}">Course Schedule</a></li>
+    <li><a href="{% url 'grades' %}">My Grades</a></li>
+    <li><a href="{% url 'appointments' %}">Appointments</a></li>
+    <li><a href="{% url 'todos' %}">To-Do List</a></li>
+</ul>
 {% endblock %}
