Modify home page to each role

--- a/unihand/professors/templates/professors/course_schedule.html
+++ b/unihand/professors/templates/professors/course_schedule.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <section class="home-landing">
-    <h1 class="home-landing-text">Grades Page</h1>
+    <h1 class="home-landing-text">Course Schedule Page</h1>
   </section>
 {% endblock %}
