--- a/unihand/professors/templates/professors/view_grades.html
+++ b/unihand/professors/templates/professors/view_grades.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <section class="home-landing">
-    <h1 class="home-landing-text">Enrollments Page</h1>
+    <h1 class="home-landing-text">View Grades Page</h1>
   </section>
 {% endblock %}
