--- a/unihand/students/templates/students/home.html
+++ b/unihand/students/templates/students/home.html
@@ -6,9 +6,10 @@
     <h1 class="home-landing-text">Students Home</h1>
 </section>
 <ul>
-    <li><a href="{% url 'course_schedules' %}">Course Schedule</a></li>
-    <li><a href="{% url 'grades' %}">My Grades</a></li>
+    <li><a href="{% url 'student_course_schedule' %}">Course Schedule</a></li>
+    <li><a href="{% url 'my_grades' %}">My Grades</a></li>
     <li><a href="{% url 'appointments' %}">Appointments</a></li>
     <li><a href="{% url 'todos' %}">To-Do List</a></li>
+    <li><a href="{% url 'enrolled_classes' %}">Enrolled Classes</a></li>
 </ul>
 {% endblock %}
