--- a/unihand/enrollments/templates/enrollments/professors/enrolled_students.html
+++ b/unihand/enrollments/templates/enrollments/professors/enrolled_students.html
@@ -3,6 +3,32 @@
 
 {% block content %}
 <section class="home-landing">
-    <h1 class="home-landing-text">Enrolled Students Page</h1>
-  </section>
+  <h1 class="home-landing-text">Enrolled Students Page</h1>
+</section>
+<section class="professor-enrollments">
+  {% for course in courses_taught %}
+      <h2>{{ course.course_code }} - {{ course.course_name }}</h2>
+      <a href="{% url 'enrolling' course.course_id %}" class="btn-add">Enroll Student</a>
+      <table>
+          <thead>
+              <tr>
+                  <th>Student Name</th>
+                  <th>Email</th>
+              </tr>
+          </thead>
+          <tbody>
+              {% for enrollment in course.enrollments.all %}
+              <tr>
+                  <td>{{ enrollment.student.user.get_full_name }}</td>
+                  <td>{{ enrollment.student.user.email }}</td>
+              </tr>
+              {% empty %}
+              <tr>
+                  <td colspan="2">No students enrolled in this course.</td>
+              </tr>
+              {% endfor %}
+          </tbody>
+      </table>
+  {% endfor %}
+</section>
 {% endblock %}
