--- a/unihand/schedules/templates/schedules/professors/course_schedule.html
+++ b/unihand/schedules/templates/schedules/professors/course_schedule.html
@@ -11,6 +11,7 @@
       <th>Type</th>
       <th>Start</th>
       <th>End</th>
+      <th>Recurrence</th>
   </tr>
   {% for schedule in course_schedule %}
   <tr>
@@ -18,6 +19,21 @@
       <td>{{ schedule.course_type }}</td>
       <td>{{ schedule.schedule_start }}</td>
       <td>{{ schedule.schedule_end }}</td>
+      <td>
+        {% if schedule.recurrence_rule %}
+          {% if schedule.get_recurring_schedule %}
+            <ul>
+              {% for occurrence in schedule.get_recurring_schedule %}
+                <li>{{ occurrence|date:"l, F j, Y at g:i A" }}</li>
+              {% endfor %}
+            </ul>
+          {% else %}
+            <p>No future occurrences available.</p>
+          {% endif %}
+        {% else %}
+          <p>No recurrence rule set.</p>
+        {% endif %}
+      </td>
   </tr>
   {% empty %}
   <tr><td colspan="4">No schedules available</td></tr>
