--- a/main/templates/main/components/base.html
+++ b/main/templates/main/components/base.html
@@ -15,7 +15,7 @@
   {% include 'main/components/site_header.html' %}
   <div class="container">
     {% if request.user.is_authenticated and request.user.role == "Student" %}
-    <aside class="sidebar">
+    <!-- <aside class="sidebar"> -->
         <section class="home-landing">
             <h1 class="home-landing-text">Student Home</h1>
         </section>
@@ -26,11 +26,11 @@
             <li><a href="{% url 'todos' %}">To-Do List</a></li>
             <li><a href="{% url 'enrolled_classes' %}">Enrolled Classes</a></li>
         </ul>
-    </aside>
+    <!-- </aside> -->
     {% endif %}
   
     {% if request.user.is_authenticated and request.user.role == "Professor" %}
-    <aside class="sidebar">
+    <!-- <aside class="sidebar"> -->
         <section class="home-landing">
             <h1 class="home-landing-text">Professor Home</h1>
         </section>
@@ -40,7 +40,7 @@
             <li><a href="{% url 'appointments' %}">Appointments</a></li>
             <li><a href="{% url 'enrolled_students' %}">Enrolled Students</a></li>
         </ul>
-    </aside>
+    <!-- </aside> -->
     {% endif %}
     <main class="content">
       {% block content %}{% endblock %}
