--- a/enrollments/templates/enrollments/students/enrolled_classes.html
+++ b/enrollments/templates/enrollments/students/enrolled_classes.html
@@ -1,28 +1,34 @@
 {% extends 'main/components/base.html' %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'main/css/enrollment.css' %}">
+{% endblock %}
+
 {% block content %}
 <section class="home-landing">
     <h1 class="home-landing-text">Enrolled Classes</h1>
 </section>
-<table>
-  <tr>
-    <th>Course</th>
-    <th>Type</th>
-    <th>Professors</th>
-  </tr>
-  {% for course in enrolled_courses %}
-  <tr>
-    <td>{{ course.course_name }}</td>
-    <td>{{ course.course_type }}</td>
-    <td>
-      {% for professor in course.professors.all %}
-          {{ professor.user.get_full_name }}{% if not forloop.last %}, {% endif %}
-      {% endfor %}
-  </td>
-  </tr>
-  {% empty %}
-  <tr><td colspan="5">No course enrolled</td></tr>
-  {% endfor %}
-</table>
+<div class="container-fluid mt-4">
+  <table class="grades-table">
+    <tr>
+      <th>Course</th>
+      <th>Type</th>
+      <th>Professors</th>
+    </tr>
+    {% for course in enrolled_courses %}
+    <tr>
+      <td>{{ course.course_name }}</td>
+      <td>{{ course.course_type }}</td>
+      <td>
+        {% for professor in course.professors.all %}
+            {{ professor.user.get_full_name }}{% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </td>
+    </tr>
+    {% empty %}
+    <tr><td colspan="5">No course enrolled</td></tr>
+    {% endfor %}
+  </table>
+</div>
 {% endblock %}
