--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,9 @@
 {% extends 'main/components/base.html' %}
+
 {% load static %}
+<link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+
+
 
 {% block content %}
 {% endblock %}
