--- a/enrollments/templates/enrollments/professors/enrolled_students.html
+++ b/enrollments/templates/enrollments/professors/enrolled_students.html
@@ -1,6 +1,11 @@
 {% extends 'main/components/base.html' %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'main/css/enrollment.css' %}">
+{% endblock %}
+
+
 {% block content %}
 <section class="home-landing">
   <h1 class="home-landing-text">Enrolled Students Page</h1>
