--- a/main/templates/main/components/base.html
+++ b/main/templates/main/components/base.html
@@ -2,51 +2,83 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block site_title %}{% endblock %}UniHand</title>
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    {% block extra_css %}{% endblock %}
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block site_title %}{% endblock %}UniHand</title>
-  <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-</head>
+  <body class="{{ request.COOKIES.theme }}">
+    {% include 'main/components/site_header.html' %}
 
-<body class="{{ request.COOKIES.theme }}">
-  {% include 'main/components/site_header.html' %}
-  <div class="container">
-    {% if request.user.is_authenticated and request.user.role == "Student" %}
-    <!-- <aside class="sidebar"> -->
-        <section class="home-landing">
-            <h1 class="home-landing-text">Student Home</h1>
-        </section>
+    <div class="container">
+      {% if request.user.is_authenticated and request.user.role == "Student" %}
+      <!-- Profile, Greeting, and Logout buttons -->
+      <div class="profile-logout">
+        <button class="profile-button" >Profile</button>
+
+        <!-- Dynamic Greeting -->
+        <span class="greeting">
+          {% if user.is_authenticated %}
+            Hi, {% if user.role == 'Student' %}{{ user.student }}{% elif user.role == 'Professor' %}{{ user.professor }}{% endif %}
+          {% endif %}
+        </span>
+
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="logout-button">Logout</button>
+        </form>
+      </div>
+
+      <div class="sidebar">
+          <ul>
+              <li><a href="{% url 'student_course_schedule' %}">Course Schedule</a></li>
+              <li><a href="{% url 'my_grades' %}">My Grades</a></li>
+              <li><a href="{% url 'appointments' %}">Appointments</a></li>
+              <li><a href="{% url 'todos' %}">To-Do List</a></li>
+              <li><a href="{% url 'enrolled_classes' %}">Enrolled Classes</a></li>
+          </ul>
+      </div>
+      {% endif %}
+    
+      {% if request.user.is_authenticated and request.user.role == "Professor" %}
+
+      <!-- Profile, Greeting, and Logout buttons -->
+      <div class="profile-logout">
+        <button class="profile-button" >Profile</button>
+        <!-- Dynamic Greeting -->
+        <span class="greeting">
+          {% if user.is_authenticated %}
+            Hi, {% if user.role == 'Student' %}{{ user.student }}{% elif user.role == 'Professor' %}{{ user.professor }}{% endif %}
+          {% endif %}
+        </span>
+
+        <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="logout-button">Logout</button>
+        </form>
+      </div>
+
+      <div class="sidebar">
         <ul>
-            <li><a href="{% url 'student_course_schedule' %}">Course Schedule</a></li>
-            <li><a href="{% url 'my_grades' %}">My Grades</a></li>
-            <li><a href="{% url 'appointments' %}">Appointments</a></li>
-            <li><a href="{% url 'todos' %}">To-Do List</a></li>
-            <li><a href="{% url 'enrolled_classes' %}">Enrolled Classes</a></li>
+          <li><a href="{% url 'professor_course_schedule' %}">Course Schedule</a></li>
+          <li><a href="{% url 'view_grades_view' %}">View Grades</a></li>
+          <li><a href="{% url 'appointments' %}">Appointments</a></li>
+          <li><a href="{% url 'enrolled_students' %}">Enrolled Students</a></li>
         </ul>
-    <!-- </aside> -->
-    {% endif %}
-  
-    {% if request.user.is_authenticated and request.user.role == "Professor" %}
-    <!-- <aside class="sidebar"> -->
-        <section class="home-landing">
-            <h1 class="home-landing-text">Professor Home</h1>
-        </section>
-        <ul>
-            <li><a href="{% url 'professor_course_schedule' %}">Course Schedule</a></li>
-            <li><a href="{% url 'view_grades_view' %}">View Grades</a></li>
-            <li><a href="{% url 'appointments' %}">Appointments</a></li>
-            <li><a href="{% url 'enrolled_students' %}">Enrolled Students</a></li>
-        </ul>
-    <!-- </aside> -->
-    {% endif %}
-    <main class="content">
-      {% block content %}{% endblock %}
-    </main>
-  </div>
-  {% include 'main/components/site_footer.html' %}
-  <script src="{% static 'main/js/main.js' %}"></script>
-</body>
+      </div>
+      {% endif %}
+      
+      <main class="content">
+        {% block content %}
+        <----- HERE ------->
+        {% endblock %}
+      </main>
+    </div>
+    {% include 'main/components/site_footer.html' %}
+    <script src="{% static 'main/js/main.js' %}"></script>
+  </body>
 </html>
